<resources>
    <string name="app_name">Repos</string>
    <string name="search_hint">Enter organization name</string>
    <string name="search_page_text">Search GitHub for repos</string>
    <string name="search">Search</string>
    <string name="enter_org_name">Enter an organization name</string>
    <string name="data_not_available">No data !!! </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
